# non_hashing_collections

./: README.md  non_hashing_dict.py  pyproject.toml
src/non_hashing_collections/: __init__.py  dict.py
