[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "non-hashing-collections"
authors = [{name = "Kaleb Barrett", email = "dev.ktbarrett@gmail.com"}]
readme = "README.md"
dynamic = ["version", "description"]
classifiers = [
    "License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)"
]
requires-python = ">=3.8"

[project.urls]
Home = "https://github.com/ktbarrett/non_hashing_collections/"
